[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pobr"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "CroMarmot", email = "yexiaorain@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "paddleocr",
    "paddlepaddle==3.1.0",
    "setuptools>=60.0",
    "aiofiles",
]

[project.urls]
Documentation = "https://github.com/CroMarmot/pobr#readme"
Issues = "https://github.com/CroMarmot/pobr/issues"
Source = "https://github.com/CroMarmot/pobr"

[tool.hatch.version]
path = "src/pobr/__about__.py"

[tool.hatch.envs.default.scripts]
bug = "python src/pobr/main.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pobr tests}"

[tool.coverage.run]
source_pkgs = ["pobr", "tests"]
branch = true
parallel = true
omit = ["src/pobr/__about__.py"]

[tool.coverage.paths]
pobr = ["src/pobr", "*/pobr/src/pobr"]
tests = ["tests", "*/pobr/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
